Finished Hero section. Started flexbox section with four columns and added images.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,39 @@
             <a href="#">Header Link 2</a>
             <a href="#">Header Link 3</a>
           </div>
-        <div class="Hero">
-        <h1>This website is awesome</h1>
-        <h3>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h3>
-        <button class="Hero-sign-up-btn">Sign up</button>
-        <a href="placeholder">Placeholder image</a>
+        <div class="row">
+        <div class="column">
+            <h1>This website is awesome</h1>
+            <h3>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h3>
+            <button class="Hero-sign-up-btn">Sign up</button>
+        </div>
+        <div class="column">
+            <div class="column"><img class="burger-img" src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/burger1.jpg" alt="burger" width="400"/></div>
         </div>
     </div>
-    <section></section>
+    </div>
+    <section class="random-section">
+        <h2>Some random information.</h2>
+        <div class="random-info">
+            <div class="column1">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="chicken burger" width="200" height="200">
+                <p>random description about image shown above.</p>
+            </div>
+            <div class="column1">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="200">
+                <p>random random random</p>
+            </div>
+            <div class="column1">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="200">
+                <p>random random random random random</p>
+            </div>
+            <div class="column1">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="200">
+                <p>random random random random random</p>
+            </div>
+
+        </div>
+    </section>
     <section></section>
     <section></section>
     <footer> Copyright @ The Odin Project 2024 </footer>
