Completed quote section. Need to finalize four images section

--- a/index.html
+++ b/index.html
@@ -26,29 +26,33 @@
         </div>
     </div>
     </div>
-    <section class="random-section">
+    <div class="random-section">
         <h2>Some random information.</h2>
         <div class="random-info">
             <div class="column1">
-                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="chicken burger" width="200" height="200">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="chicken burger" width="200" height="150">
                 <p>random description about image shown above.</p>
             </div>
             <div class="column1">
-                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="200">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="150">
                 <p>random random random</p>
             </div>
             <div class="column1">
-                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="200">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="150">
                 <p>random random random random random</p>
             </div>
             <div class="column1">
-                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="200">
+                <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="150">
                 <p>random random random random random</p>
             </div>
 
         </div>
+    </div>
+    <section>
+        <div class="quote">
+            <div class="burger-quote"><h2>"Burgers are proof that sometimes the simplest things are the most extraordinary." - Thomas Keller </h2></div>
+        </div>
     </section>
-    <section></section>
     <section></section>
     <footer> Copyright @ The Odin Project 2024 </footer>
 </body>
