--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 <img src="/Users/minanguyen/Odin-project/repos/odin-landing-page/images/chicken-burger.jpg" alt="" width="200" height="150">
                 <p>random random random random random</p>
             </div>
-
         </div>
     </div>
     <section>
@@ -53,7 +52,17 @@
             <div class="burger-quote"><h2>"Burgers are proof that sometimes the simplest things are the most extraordinary." - Thomas Keller </h2></div>
         </div>
     </section>
-    <section></section>
+    <section>
+        <div class="call-to-action">
+            <div class="blue-box">
+                <div class="blue-box-quote">
+                    <div class="call-to-action-quote"><h3>Call to action! It's time!</h3></div>
+                    <div class="sign-up-quote"><p>Sign up for updates by clicking that button right over there!</p></div>
+                </div>
+                <button class="sign-up-btn">Sign Up</button>
+            </div>
+        </div>
+    </section>
     <footer> Copyright @ The Odin Project 2024 </footer>
 </body>
 </html>
