--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="call-to-action-quote"><h3>Call to action! It's time!</h3></div>
                     <div class="sign-up-quote"><p>Sign up for updates by clicking that button right over there!</p></div>
                 </div>
-                <button class="sign-up-btn">Sign Up</button>
+                <div class="btn-box"><button class="sign-up-btn">Sign Up</button></div>
             </div>
         </div>
     </section>
